--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,11 +36,16 @@ jobs:
           source venv/bin/activate
           pytest
 
+      - name: Install Trivy CLI
+        run: |
+          curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin
+
       - name: Dependency vulnerability scan
-        uses: aquasecurity/trivy-action@v0.36.0
-        with:
-          scan-type: fs
-          scan-path: .
+        run: trivy fs --exit-code 1 --severity HIGH,CRITICAL . 
+
+      - name: Container vulnerability scan
+        run: trivy image --exit-code 1 --severity HIGH,CRITICAL ${{ secrets.ECR_REGISTRY }}/${{ secrets.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
+
 
   build_and_push:
     needs: test
