--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Run tests
         run: |
-          source venv/bin/activate
+          source app/venv/bin/activate
           pytest app/tests/
 
       - name: Install Trivy CLI
