--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,16 +25,16 @@ jobs:
 
       - name: Install dependencies
         run: |
-          cd app  
-          python -m venv venv
-          source venv/bin/activate
-          pip install -r requirements.txt
+          python -m venv app/venv
+          source app/venv/bin/activate
+          pip install -r app/requirements.txt
 
       - name: Run tests
+        env:
+          PYTHONPATH: ./app
         run: |
-          cd app
-          source venv/bin/activate
-          pytest
+          source app/venv/bin/activate
+          pytest app/tests/
 
       - name: Install Trivy CLI
         run: |
