--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,10 @@ jobs:
       - name: Dependency vulnerability scan
         run: trivy fs --exit-code 1 --severity HIGH,CRITICAL . 
 
+      - name: Login to Amazon ECR (for Trivy)
+        run: |
+          aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${{ secrets.ECR_REGISTRY }}
+
       - name: Container vulnerability scan
         run: trivy image --exit-code 1 --severity HIGH,CRITICAL ${{ secrets.ECR_REGISTRY }}/${{ secrets.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
 
