--- a/app/deploy-files/ingress.yaml
+++ b/app/deploy-files/ingress.yaml
@@ -4,14 +4,14 @@ metadata:
   name: python-microservice-ingress
   namespace: default
   annotations:
-    kubernetes.io/ingress.class: alb
-    alb.ingress.kubernetes.io/scheme: internet-facing         
+    alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
-    alb.ingress.kubernetes.io/target-type: instance          
-    alb.ingress.kubernetes.io/healthcheck-path: /health  
+    alb.ingress.kubernetes.io/target-type: instance
+    alb.ingress.kubernetes.io/healthcheck-path: /health
     alb.ingress.kubernetes.io/healthcheck-port: "8000"
     alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
 spec:
+  ingressClassName: alb
   rules:
   - http:
       paths:
