--- a/app/deploy-files/ingress.yaml
+++ b/app/deploy-files/ingress.yaml
@@ -6,9 +6,8 @@ metadata:
   annotations:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
-    alb.ingress.kubernetes.io/target-type: instance
     alb.ingress.kubernetes.io/target-type: ip
-    alb.ingress.kubernetes.io/healthcheck-path: /
+    alb.ingress.kubernetes.io/healthcheck-path: /health
     alb.ingress.kubernetes.io/healthcheck-port: "traffic-port"
     alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
 spec:
@@ -16,7 +15,7 @@ spec:
   rules:
   - http:
       paths:
-      - path: /items/*
+      - path: /items
         pathType: Prefix
         backend:
           service:
