--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,10 +3,10 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - main
+      - main1
   pull_request:
     branches:
-      - main
+      - main1
   workflow_dispatch:
 
 env:
@@ -42,7 +42,7 @@ jobs:
           curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin
 
       - name: Dependency vulnerability scan
-        run: trivy fs --exit-code 0 --severity HIGH,CRITICAL .
+        run: trivy fs --exit-code 0 --severity HIGH,CRITICAL . 
 
   build_and_push:
     # needs: test
@@ -193,11 +193,20 @@ jobs:
 
   notify:
     needs: [test, build_and_push, deploy_staging, deploy_production_pr, deploy_production_push]
-    if: ${{ needs.test.result == 'failure' || needs.build_and_push.result == 'failure' || needs.deploy_staging.result == 'failure' || needs.deploy_production_pr.result == 'failure' || needs.deploy_production_push.result == 'failure' }}
     runs-on: ubuntu-latest
+    if: always()
     steps:
-      - name: Slack Notification on Failure
+      - name: Slack Notification
         uses: rtCamp/action-slack-notify@v2
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
-          SLACK_MESSAGE: "CI/CD pipeline failed for repository ${{ github.repository }} at run #${{ github.run_number }}"
+          SLACK_MESSAGE: |
+            CI/CD pipeline for repository ${{ github.repository }} run #${{ github.run_number }} 
+            has *${{ 
+              (needs.test.result == 'failure' || 
+               needs.build_and_push.result == 'failure' || 
+               needs.deploy_staging.result == 'failure' || 
+               needs.deploy_production_pr.result == 'failure' || 
+               needs.deploy_production_push.result == 'failure') 
+              && 'FAILED' || 'SUCCEEDED' 
+            }}*.
