--- a/app/deploy-files/vs.yaml
+++ b/app/deploy-files/vs.yaml
@@ -14,6 +14,8 @@ spec:
         prefix: /items
     - uri:
         prefix: /docs
+    - uri:
+        prefix: /openapi.json
     route:
     - destination:
         host: python-microservice.default.svc.cluster.local
