--- a/app/deploy-files/configmap.yaml
+++ b/app/deploy-files/configmap.yaml
@@ -4,4 +4,4 @@ metadata:
   name: python-microservice-config
   namespace: default
 data:
-  DATABASE_URL: "postgresql+asyncpg://DevopsUser:MyStr0ngPassw0rd!@postgres1.c5a6eccse0qo.ap-south-1.rds.amazonaws.com"
+  DATABASE_URL: "postgresql+psycopg2://DevopsUser:MyStr0ngPassw0rd@postgres1.c5a6eccse0qo.ap-south-1.rds.amazonaws.com:5432/postgres"
